syntax = "proto3";

option java_package = "cn.spacexc.wearbili.remake.proto.settings";
option java_multiple_files = true;

enum AppTheme {
  Default = 0;
  Dark = 1;
}

enum Player {
  VideoPlayer = 0;
  AudioPlayer = 1;
}

enum RecommendSource {
  App = 0;
  Web = 1;
}

enum QuickToolBarFunction {
  History = 0;
  Search = 1;
  Cache = 2;
  Message = 3;
  Favourite = 4;
  None = 5;
}

enum QuickToolBarSlotCount {
  Zero = 0;
  One = 1;
  Two = 2;
}

message QuickToolBarConfiguration {
  QuickToolBarSlotCount slotCount = 1;
  QuickToolBarFunction functionOne = 2;
  QuickToolBarFunction functionTwo = 3;
}

message DanmakuPlayerSettings {
  float alpha = 1;
  float displayArea = 2;
  float fontScale = 3;
  int32 blockLevel = 4;
  bool isNormalDanmakuEnabled = 5;
  bool isAdvanceDanmakuEnabled = 6;
}

enum VideoDecoder {
  Hardware = 0;
  Software = 1;
}

enum VideoDisplaySurface {
  SurfaceView = 0;
  TextureView = 1;
}

message AppConfiguration {
  AppTheme theme = 1;
  QuickToolBarConfiguration toolBarConfiguration = 2;
  bool hasAnimation = 3;
  RecommendSource recommendSource = 4;
  Player defaultPlayer = 5;
  bool haveToolBarTipDisplayed = 6;
  DanmakuPlayerSettings danmakuPlayerSettings = 7;
  float screenDisplayScaleFactor = 8;
  VideoDecoder videoDecoder = 9;
  bool isVideoLowPerformance = 10;
  bool initialized = 11;
  string activatedExperimentFunctions = 12;
  VideoDisplaySurface videoDisplaySurface = 13;
}